# margin_calculator

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  __init__.py  app.py  calculator.py  cli.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: codacy.yml  python-tests.yml
.streamlit/: config.toml
tests/: test_app_helpers.py  test_calculations.py  test_cli.py  test_to_decimal.py  test_to_int.py
