[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "margin_calculator"
version = "0.1.0"
dependencies = [
    "streamlit==1.45.1",
]

[project.scripts]
margin-calc = "margin_calculator.cli:main"

[tool.setuptools]
packages = ["margin_calculator"]
[tool.setuptools.package-dir]
margin_calculator = "."
